# P2P

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
crates/hexgab-client/: Cargo.toml
crates/hexgab-client/src/: lib.rs
crates/hexgab-core/: Cargo.toml
crates/hexgab-core/src/: lib.rs
crates/hexgab-crypto/: Cargo.toml
crates/hexgab-crypto/src/: aead.rs  lib.rs  ratchet.rs  replay.rs
crates/hexgab-gui/: Cargo.toml
crates/hexgab-gui/src/: main.rs
crates/hexgab-handshake/: Cargo.toml
crates/hexgab-handshake/src/: lib.rs
crates/hexgab-identity/: Cargo.toml
crates/hexgab-identity/src/: lib.rs
crates/hexgab-security/: Cargo.toml
crates/hexgab-security/src/: lib.rs
crates/hexgab-session/: Cargo.toml
crates/hexgab-session/src/: bootstrap.rs  controller.rs  lib.rs  metadata.rs
crates/hexgab-session/tests/: e2e.rs
crates/hexgab-transport/: Cargo.toml
crates/hexgab-transport/src/: codec.rs  direct.rs  lib.rs
docker/: entrypoint.sh  torrc
docs/: CRYPTOGRAPHY.md  SECURITY.md  THREAT_MODEL.md
