[package]
name = "hexgab-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
hexgab-core.workspace = true
chacha20poly1305.workspace = true
x25519-dalek.workspace = true
hkdf.workspace = true
sha2.workspace = true
hmac.workspace = true
rand.workspace = true
zeroize.workspace = true
subtle.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
hexgab-crypto = { path = "." }
