[package]
name = "hexgab-handshake"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
hexgab-core.workspace = true
spake2.workspace = true
hkdf.workspace = true
sha2.workspace = true
hmac.workspace = true
rand.workspace = true
zeroize.workspace = true
serde.workspace = true
subtle.workspace = true
