[package]
name = "hexgab-transport"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
hexgab-core.workspace = true
tokio.workspace = true
bytes.workspace = true
serde.workspace = true
bincode.workspace = true
tracing.workspace = true
thiserror.workspace = true
futures.workspace = true

[features]
default = ["direct"]
direct = []
tor-socks = []
